feat: ポップアップにスマートペイ明細ページへのリンクを追加

--- a/extension/popup/popup.html
+++ b/extension/popup/popup.html
@@ -42,7 +42,7 @@
       <div class="info-section">
         <p class="info-text">
           <strong>使用手順:</strong><br />
-          1. Mercariのスマート払い明細ページを開く<br />
+          1. <a href="https://jp.mercari.com/mypage/merpay/smartpayment/easypay/select" target="_blank" class="link-btn">スマートペイの明細ページを開く</a><br />
           2. 「利用明細取得」ボタンを押す<br />
           3. 取得できない場合は「ページ構造検査」でデバッグしてください。
         </p>
