feat: プラグイン開封時の自動ページ構造検査とトースト通知システムを実装
- プラグイン開封時に自動でページ構造検査を実行
- 問題がある場合のみトースト通知を表示
- すべてのアラートをトースト通知に置き換え
- 背景色を白に戻して可読性を向上
- silentフラグによる通知制御機能を追加

--- a/extension/popup/popup.html
+++ b/extension/popup/popup.html
@@ -63,6 +63,9 @@
       </div>
     </div>
 
+    <!-- トースト通知コンテナ -->
+    <div class="toast-container" id="toast-container"></div>
+
     <script src="popup.js"></script>
   </body>
 </html>
