--- a/extension/popup/popup.html
+++ b/extension/popup/popup.html
@@ -19,7 +19,12 @@
           <div class="usage-steps">
             <div class="step">
               <span class="step-number">1</span>
-              <a href="https://jp.mercari.com/mypage/merpay/smartpayment/easypay/select" target="_blank" class="link-btn">スマートペイの明細ページを開く</a>
+              <a
+                href="https://jp.mercari.com/mypage/merpay/smartpayment/easypay/select"
+                target="_blank"
+                class="link-btn"
+                >スマートペイの明細ページを開く</a
+              >
             </div>
             <div class="step">
               <span class="step-number">2</span>
